syntax = "proto3";

option go_package = ".;pb";
package pb;
import "pb/user.proto";

message Video{
  int64 id = 1;
  User author =2;
  string playUrl = 3;
  string coverUrl =4;
  int64 favoriteCount =5;
  int64 commentCount =6;
  bool isFavorate =7;
  string title = 8;
}

message FeedRequest{
  int64 latest_time = 1;
}
message FeedResponse{
  repeated Video list = 1;
  int64 next_time =2;
}


service FeedService{
  rpc Feed(FeedRequest) returns (FeedResponse);
}